[package]
name = "dns-over-tls"
version = "0.2.0"
authors = ["Paul Mucur <mudge@mudge.name>"]
edition = "2018"
description = "A lightweight DNS-over-HTTPS proxy"
repository = "https://github.com/mudge/homer"
license = "MIT"
keywords = ["dns", "dns-over-tls", "dns-over-https", "doh"]
readme = "README.md"

[[bin]]
name = "dns-over-tls"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "1"

[profile.release]
lto = true
