[package]
name = "dns-over-tls"
version = "0.2.0"
authors = ["Paul Mucur <mudge@mudge.name>"]
edition = "2018"
description = "A lightweight DNS-over-HTTPS proxy"
repository = "https://github.com/mudge/homer"
license = "MIT"
keywords = ["dns", "dns-over-tls", "dns-over-https", "doh"]
readme = "README.md"

[[bin]]
name = "dns-over-tls"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc2 = { version = "3", features = ["tokio", "termination"] }
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.12", features = [] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

[profile.release]
lto = true
